--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "author": "Vishal",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "method-override": "^3.0.0",
     "mongoose": "^5.6.0",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
