--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a web app to mark your attendence",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon app.js",
     "start": "node app.js"
   },
   "author": "Vishal",
